fix delete user
